Spend way too long fixing layout.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,12 +13,12 @@ pre {
     margin: 1rem 0;
     padding: 1rem;
     border-bottom: 1px solid;
-    max-width: 40rem;
-    overflow-x: scroll;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 code {
-    font-size: 16px;
+    font-size: 0.85rem;
     font-family: "consolas", "dejavu sans mono", monospace;
 }
 
@@ -75,7 +75,7 @@ a:focus {
 
 .l-flex-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: no-wrap;
     justify-content: center;
     max-width: 1200px;
     margin: auto;
@@ -83,8 +83,8 @@ a:focus {
 }
 
 .l-small-column {
-    flex-basis: 12rem;
-    flex-grow: 1;
+    width: 320px;
+    flex-shrink: 0;
     box-sizing: border-box;
     border-left: 1px solid;
     border-right: 1px solid;
@@ -93,8 +93,6 @@ a:focus {
 .l-large-column {
     display: flex;
     flex-direction: column;
-    flex-basis: 24rem;
-    flex-grow: 4;
     box-sizing: border-box;
     border-right: 1px solid;
     min-height: 100vh;
@@ -176,10 +174,6 @@ li code {
     border: 1px solid;
 }
 
-figure[class="highlight"] {
-    
-}
-
 footer {
     font-size: 0.8rem;
     line-height: 0.9rem;
@@ -190,4 +184,28 @@ footer {
 
 footer a {
     text-decoration: underline;
+}
+
+
+@media screen and (max-width: 780px) {
+    html {
+        font-size: 16px;
+    }
+
+    .l-flex-container {
+        flex-wrap: wrap;
+    }
+
+    .l-small-column {
+        width: 100%;
+        flex-shrink: 0;
+        box-sizing: border-box;
+        border-left: 0;
+        border-right: 0;
+    }
+
+    .l-large-column {
+        border-right: 0;
+        min-height: 100vh;
+    }
 }
